--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <header>
             <nav class="mobile-screen navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="navbar-brand" href="index.php"><img src="images/logo.png" width="120px;"></a>
+                  <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="120px;"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -33,7 +33,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item active">
-                        <a class="nav-link" href="index.php">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -48,7 +48,7 @@
             <div class="container">
               <div class="row">
                 <div class="col-md nav-link nav-link-l">
-                    <a href="index.php">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#">About</a>
                     <a href="#">Contact</a>
                 </div>
@@ -86,21 +86,21 @@
             <div class="container home-grid">
                 <h1>New Ins</h1>
                 <div class="row">
-                    <a href="product1.php">
+                    <a href="product1.html">
                     <div class="col-md">
                             <span class="thumb-price">&#36;280</span>
                             <img class="thumbnail" src="images/4.jpeg">
                             <p class="title">React Element 87 &#39;Light Bone&#39;</p>
                     </div>
                     </a>    
-                    <a href="product2.php">
+                    <a href="product2.html">
                     <div class="col-md">
                         <span class="thumb-price">&#36;140</span>
                         <img class="thumbnail" src="images/7.jpeg">
                         <p class="title">React Element 87 &#39;Solar Red&#39;</p>
                     </div>
                     </a>    
-                    <a href="product3.php">
+                    <a href="product3.html">
                     <div class="col-md">
                         <span class="thumb-price">&#36;200</span>
                         <img class="thumbnail" src="images/1.jpeg">
