--- a/product1.html
+++ b/product1.html
@@ -261,7 +261,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item">
-                        <a class="nav-link" href="index.php">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -276,12 +276,12 @@
             <div class="container">
               <div class="row">
                 <div class="col-md nav-link nav-link-l">
-                    <a href="index.php">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#">About</a>
                     <a href="#">Contact</a>
                 </div>
                 <div class="col-md nav-link nav-link-c">
-                  <a href="index.php" class="logo"><img src="images/logo.png" width="120px"></a>
+                  <a href="index.html" class="logo"><img src="images/logo.png" width="120px"></a>
                 </div>
                 <div class="col-md nav-link nav-link-r">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
