--- a/product3.html
+++ b/product3.html
@@ -128,7 +128,7 @@
                     <a href="#">Contact</a>
                 </div>
                 <div class="col-md nav-link nav-link-c">
-                  <a href="index.php" class="logo"><img src="images/logo.png" width="120px"></a>
+                  <a href="index.html" class="logo"><img src="images/logo.png" width="120px"></a>
                 </div>
                 <div class="col-md nav-link nav-link-r">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
