--- a/product1.html
+++ b/product1.html
@@ -253,7 +253,7 @@
         </div>
         <header>
           <nav class="mobile-screen navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="navbar-brand" href="index.php"><img src="images/logo.png" width="120px;"></a>
+                  <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="120px;"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
