--- a/product2.html
+++ b/product2.html
@@ -253,7 +253,7 @@
         </div>
         <header>
           <nav class="mobile-screen navbar navbar-expand-lg navbar-light bg-light">
-                  <a class="navbar-brand" href="index.php"><img src="images/logo.png" width="120px;"></a>
+                  <a class="navbar-brand" href="index.html"><img src="images/logo.png" width="120px;"></a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -261,7 +261,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                       <li class="nav-item">
-                        <a class="nav-link" href="index.php">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="#">About</a>
@@ -276,12 +276,12 @@
             <div class="container">
               <div class="row">
                 <div class="col-md nav-link nav-link-l">
-                    <a href="index.php">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="#">About</a>
                     <a href="#">Contact</a>
                 </div>
                 <div class="col-md nav-link nav-link-c">
-                  <a href="index.php" class="logo"><img src="images/logo.png" width="120px"></a>
+                  <a href="index.html" class="logo"><img src="images/logo.png" width="120px"></a>
                 </div>
                 <div class="col-md nav-link nav-link-r">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
